frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend-service
spec:
  ports:
  - port: 3000
    name: http
    targetPort: 3000
  selector:
    app: frontend
